# omni-code

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: config.rs  cost.rs  logging.rs  main.rs  router.rs  server.rs
src/provider/: anthropic.rs  mod.rs  openai.rs
tests/: basic_tests.rs
