[package]
name = "omni-code"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Unified AI coding proxy — route any LLM CLI through a single control plane"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
